Bug 310807 - "Rename" action missing in identity context menu
Summary: "Rename" action missing in identity context menu
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: 4.9.3
Platform: Chakra Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-28 09:50 UTC by Bernd Oliver Sünderhauf
Modified: 2012-11-28 12:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernd Oliver Sünderhauf 2012-11-28 09:50:12 UTC
In the config dialog, while there are buttons for "Add", "Modify", "Rename" and "Remove", the context menu of an identity is missing the "Rename" action.

Reproducible: Always
Comment 1 Laurent Montel 2012-11-28 10:05:42 UTC
I confirm it and will commit fix soon.
Comment 2 Bernd Oliver Sünderhauf 2012-11-28 10:20:20 UTC
Actually this seems to be the only listing in the whole config dialog with a context menu, see Bug #310808.
Comment 3 Laurent Montel 2012-11-28 10:38:22 UTC
(In reply to comment #2)
> Actually this seems to be the only listing in the whole config dialog with a
> context menu, see Bug #310808.

yes but no :)
I will add "rename" because it's missing but will not add menu for other listview.
a lot of work an not a lot of improvment.
Comment 4 Bernd Oliver Sünderhauf 2012-11-28 12:04:12 UTC
That's of course true. I'm just scrutinizing the config dialog for possible UI improvements, and decided to report everything, whether urgent or just nice-to-have. One day we might have the manpower to do things like that, which are nice junior tasks as well.
Comment 5 Laurent Montel 2012-11-28 12:33:50 UTC
Git commit 298f2b022f37b44c25845b62a79662454a19f8bf by Montel Laurent.
Committed on 28/11/2012 at 13:04.
Pushed by mlaurent into branch 'master'.

Fix Bug 310807 - "Rename" action missing in identity context menu

FIXED-IN: 4.10

M  +1    -0    kmail/identitypage.cpp

http://commits.kde.org/kdepim/298f2b022f37b44c25845b62a79662454a19f8bf
Comment 6 Laurent Montel 2012-11-28 12:35:00 UTC
(In reply to comment #4)
> That's of course true. I'm just scrutinizing the config dialog for possible
> UI improvements, and decided to report everything, whether urgent or just
> nice-to-have. One day we might have the manpower to do things like that,
> which are nice junior tasks as well.

Thanks for reporting all this bugs :)
It helps me to make kmail very good :)