Fix Bug 310807 - "Rename" action missing in identity context menu

FIXED-IN: 4.10
BUG: 310807